# hw1-debaniet

./: best_model.h5  hw1_complete.py  main.py  pyproject.toml
.github/workflows/: classroom.yml
